--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Đi chơi valentine với tui hong?</h1>
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Coa</button>
+            <button class="yes-button" onclick="handleYesClick()">Cóa</button>
             <button class="no-button" onclick="handleNoClick()">Hong</button>
         </div>
         <div class="gif_container">
